Update all Jinja2 end blocks to include block title

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 
@@ -288,4 +288,4 @@
 </div>
 {% endif %}
 
-{% endblock %}
+{% endblock main %}
