--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block login %}
 <div class="row" style="height: 200px;"></div>
@@ -22,4 +22,4 @@
     <div class="col-sm-4"></div>
 </div>
 
-{% endblock %}
+{% endblock login %}
