--- a/templates/allocate.html
+++ b/templates/allocate.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 
@@ -62,4 +62,4 @@
     <div class="col-sm-3"></div>
 </div>
 
-{% endblock %}
+{% endblock main %}
