--- a/templates/expense.html
+++ b/templates/expense.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 
@@ -50,4 +50,4 @@
     <div class="col-sm-3"></div>
 </div>
 
-{% endblock %}
+{% endblock main %}
