--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <!-- bootstrap starter template from: https://getbootstrap.com/docs/5.1/getting-started/introduction/ -->
 <html lang="en">
-    <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/cedb82d192.js" crossorigin="anonymous"></script>
@@ -15,144 +17,157 @@
     <!-- Link to personal CSS file -->
     <link href="/static/final.css" rel="stylesheet">
 
-     <!--Link to personal JS file-->
+    <!--Link to personal JS file-->
     <script src="/static/finalJS.js"></script>
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock title %}</title>
 </head>
 {% if logged == 0 %}
-    <header class="log_reg_container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for category, message in messages %}
-                        <div class="col-sm-12">
-                            <div class="alert alert-{{ category }} border text-center" role="alert">
-                                {{ get_flashed_messages() | join(" ") }}
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-    </header>
+<header class="log_reg_container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="col-sm-12">
+        <div class="alert alert-{{ category }} border text-center" role="alert">
+            {{ get_flashed_messages() | join(" ") }}
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+</header>
 {% endif %}
 
 
-    <body>
-        <!-- Inverted BS navigation bar using forms and submit buttons to call HTTP routes rather than hyperlinks-->
-        <nav class="navbar navbar-inverse fixed-top">
-            <div class="container-fluid">
-                <div class="navbar_header" style="font-size: x-large;">
-                    <a class="navbar-brand" href="/"><i class="	fas fa-home"></i></a>
-                    <span style="color: purple;"> B</span>
-                    <span style="color: blue">u</span>
-                    <span style="color: green">d</span>
-                    <span style="color: goldenrod">g</span>
-                    <span style="color: orange">e</span>
-                    <span style="color: red">t</span>
-                    <span style="color: purple">B</span>
-                    <span style="color: blue">u</span>
-                    <span style="color: green">d</span>
-                    <span style="color: goldenrod">d</span>
-                    <span style="color: orange">y</span>
-                </div>
-
-                <!-- Navbar when user IS logged in-->
-                {% if session.user_id %}
-                <ul class="nav navbar-nav navbar-right">
-                    <form method="GET">
-                        <button class="btn btn-primary" type="submit" formaction="/settings">Account</button>
-                        <button class="btn btn-primary" type="submit" formaction="/logout">Logout</button>
-                    </form>
-                </ul>
-
-                <!-- When user is NOT logged in-->
-                {% else %}
-                    <ul class="nav navbar-nav navbar-right">
-                        <form>
-                            <button class="btn btn-primary" type="submit" formaction="/register"><i class='fas fa-user-alt'></i>  Register</button>
-                            <button class="btn btn-primary" type="submit" formaction="/login"><i class='fas fa-sign-in-alt'></i>  Login</button>
-                        </form>
-                    </ul>
-
-                {% endif%}
+<body>
+    <!-- Inverted BS navigation bar using forms and submit buttons to call HTTP routes rather than hyperlinks-->
+    <nav class="navbar navbar-inverse fixed-top">
+        <div class="container-fluid">
+            <div class="navbar_header" style="font-size: x-large;">
+                <a class="navbar-brand" href="/"><i class="	fas fa-home"></i></a>
+                <span style="color: purple;"> B</span>
+                <span style="color: blue">u</span>
+                <span style="color: green">d</span>
+                <span style="color: goldenrod">g</span>
+                <span style="color: orange">e</span>
+                <span style="color: red">t</span>
+                <span style="color: purple">B</span>
+                <span style="color: blue">u</span>
+                <span style="color: green">d</span>
+                <span style="color: goldenrod">d</span>
+                <span style="color: orange">y</span>
             </div>
 
-        </nav>
+            <!-- Navbar when user IS logged in-->
+            {% if session.user_id %}
+            <ul class="nav navbar-nav navbar-right">
+                <form method="GET">
+                    <button class="btn btn-primary" type="submit" formaction="/settings">Account</button>
+                    <button class="btn btn-primary" type="submit" formaction="/logout">Logout</button>
+                </form>
+            </ul>
 
-        <!-- Show left nav bar if user IS logged in -->
-        {% if session.user_id %}
+            <!-- When user is NOT logged in-->
+            {% else %}
+            <ul class="nav navbar-nav navbar-right">
+                <form>
+                    <button class="btn btn-primary" type="submit" formaction="/register"><i class='fas fa-user-alt'></i>
+                        Register</button>
+                    <button class="btn btn-primary" type="submit" formaction="/login"><i class='fas fa-sign-in-alt'></i>
+                        Login</button>
+                </form>
+            </ul>
 
-            <!-- Main container -->
-            <div class="container-fluid nav_padd">
+            {% endif%}
+        </div>
 
-                <!-- Main container Row -->
-                <div class="row">
+    </nav>
 
-                    <!-- Left vertical nagivation panel -->
-                    <div class="col-sm-2 left_nav">
+    <!-- Show left nav bar if user IS logged in -->
+    {% if session.user_id %}
 
-                        <!-- Budget row -->
-                        <a href="/"><div class="row left_nav_row">
-                            <h3>Budget</h3>
-                        </div></a>
+    <!-- Main container -->
+    <div class="container-fluid nav_padd">
 
-                        <!-- Transactions row -->
-                        <a href="/transactions"><div class="row left_nav_row">
-                            <h3>History</h3>
-                        </div></a>
+        <!-- Main container Row -->
+        <div class="row">
 
-                        <!-- Allocate row -->
-                        <a href="/allocate"><div class="row left_nav_row">
-                            <h3>Allocate</h3>
-                        </div></a>
+            <!-- Left vertical nagivation panel -->
+            <div class="col-sm-2 left_nav">
 
-                        <!-- Post row -->
-                        <a href="/expense"><div class="row left_nav_row">
-                            <h3>Post</h3>
-                        </div></a>
-
+                <!-- Budget row -->
+                <a href="/">
+                    <div class="row left_nav_row">
+                        <h3>Budget</h3>
                     </div>
-                    <div class="col-sm-2"></div>
+                </a>
+
+                <!-- Transactions row -->
+                <a href="/transactions">
+                    <div class="row left_nav_row">
+                        <h3>History</h3>
+                    </div>
+                </a>
+
+                <!-- Allocate row -->
+                <a href="/allocate">
+                    <div class="row left_nav_row">
+                        <h3>Allocate</h3>
+                    </div>
+                </a>
+
+                <!-- Post row -->
+                <a href="/expense">
+                    <div class="row left_nav_row">
+                        <h3>Post</h3>
+                    </div>
+                </a>
+
+            </div>
+            <div class="col-sm-2"></div>
 
 
-                    <!-- Main area where budget table lives is stored in the remaining 9 columns -->
-                    <div class="col-sm-10 main-group">
+            <!-- Main area where budget table lives is stored in the remaining 9 columns -->
+            <div class="col-sm-10 main-group">
 
-                        {% with messages = get_flashed_messages(with_categories=true) %}
-                            {% if messages %}
-                                {% for category, message in messages %}
-                                    <div class="col-sm-10">
-                                        <div class="alert alert-{{ category }} border text-center" role="alert">
-                                            {{ get_flashed_messages() | join(" ") }}
-                                        </div>
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
-                        {% endwith %}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                {% for category, message in messages %}
+                <div class="col-sm-10">
+                    <div class="alert alert-{{ category }} border text-center" role="alert">
+                        {{ get_flashed_messages() | join(" ") }}
+                    </div>
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
 
 
-                        {% block main %}
+                {% block main %}
 
-                        <!-- Take note here that when the user is logged in, everything that's placed into this will be
+                <!-- Take note here that when the user is logged in, everything that's placed into this will be
                             operating within a 10-col grid. That is because block main is placed within the BS grid
                             that houses the 2-col left navigation bar and leaves the rest for the given pages content. -->
 
-                        {% endblock %}
+                {% endblock main %}
 
-                    </div>
-                </div>
             </div>
+        </div>
+    </div>
 
-        {% else %}
+    {% else %}
 
-            {% block login %}
+    {% block login %}
 
-            {% endblock %}
+    {% endblock login %}
 
-        {% endif %}
+    {% endif %}
 
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
