--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block login %}
 
@@ -30,4 +30,4 @@
     <div class="col-sm-4"></div>
 </div>
 
-{% endblock %}
+{% endblock login %}
