--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 
@@ -350,4 +350,4 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock main %}
