--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
 {{ ptitle }}
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 
@@ -89,4 +89,4 @@
     <div class="col-sm-3"></div>
 </div>
 
-{% endblock %}
+{% endblock main %}
