--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
         <h2>Login</h2>
-        <form action="/login" method="POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <div class="form-group">
                 <input type="text" name="username" class="form-control login-form" placeholder="Username"
                     autocomplete="off" autofocus>
