--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -52,7 +52,8 @@
                     </tbody>
                     {% endfor %}
                 </table>
-                <form id="pw_reset_form" style="display: none" action="/settings/pw_reset" method="post">
+                <form id="pw_reset_form" style="display: none" action="{{ url_for('settings_usage', usage='pw_reset')}}"
+                    method="post">
                     <div class="form-group">
                         <input type="password" name="old" class="form-control" autocomplete="off" required
                             placeholder="Current password">
@@ -87,7 +88,7 @@
                 <div class="col-sm-9">
 
                     <h5>Create New Budget</h5>
-                    <form action="{{ url_for('settings', usage='new_bud') }}" method="post">
+                    <form action="{{ url_for('settings_usage', usage='new_bud') }}" method="post">
                         <div class="form-group">
                             <input type="text" name="bud_name" class="form-control" placeholder="Budget Name"
                                 autocomplete="off" autofocus required>
@@ -106,13 +107,14 @@
                 <div class="col-sm-9">
 
                     <h5>Switch Budgets</h5>
-                    <form action="{{ url_for('settings', usage='switch')}}" method="post">
+                    <form action="{{ url_for('settings_usage', usage='switch')}}" method="post">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control">
                                 <option class="form-control" disabled selected value="">Select a budget</option>
                                 {% for budget in budgets %}
                                 {% if budget.active %}
-                                <option value="{{ budget.bud_id }}">{{ budget.bud_name }} <em>(Current)</em></option>
+                                <option disabled value="{{ budget.bud_id }}">{{ budget.bud_name }} <em>(Current)</em>
+                                </option>
                                 {% else %}
                                 <option value="{{ budget.bud_id }}">{{ budget.bud_name }}</option>
                                 {% endif %}
@@ -131,13 +133,14 @@
                 <div class="col-sm-9">
 
                     <h5>Reset Budget</h5>
-                    <form action="{{ url_for('settings', usage='bud_reset')}}" method="POST">
+                    <form action="{{ url_for('settings_usage', usage='bud_reset')}}" method="POST">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control" required>
                                 <option class="form-control" disabled selected value="">Select a budget</option>
                                 {% for budget in budgets %}
                                 {% if budget.active %}
-                                <option value="{{ budget.bud_id }}">{{ budget.bud_name }} <em>(Current)</em></option>
+                                <option value="{{ budget.bud_id }}">{{ budget.bud_name }} <em>(Current)</em>
+                                </option>
                                 {% else %}
                                 <option value="{{ budget.bud_id }}">{{ budget.bud_name }}</option>
                                 {% endif %}
@@ -165,7 +168,7 @@
                 <div class="col-sm-9">
 
                     <h5>Delete Budget</h5>
-                    <form action="{{ url_for('settings', usage='bud_delete')}}" method="post">
+                    <form action="{{ url_for('settings_usage', usage='bud_delete')}}" method="post">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control" required>
                                 <option class="form-control" disabled selected value="">Select a budget</option>
@@ -232,7 +235,7 @@
                             <td colspan="4">
                                 <p class="alert alert-warning" style="padding: 2px">Payee name changes will affect all
                                     historical records</p>
-                                <form action="{{ url_for('settings', usage='edit_payees')}}" method="POST">
+                                <form action="{{ url_for('settings_usage', usage='edit_payees')}}" method="POST">
                                     <div class="form-group">
                                         <input type="text" name="payee_id" hidden value="{{ payee.payee_id }}">
                                         <input type="text" name="old_name" hidden value="{{ payee.payee_name }}">
@@ -279,7 +282,7 @@
                                 <th>{{ group.group_name }}</th>
                                 <th>
                                     <!-- GROUP REACTIVATION FORM -->
-                                    <form action="{{ url_for('settings', usage='group_react')}}" method="post">
+                                    <form action="{{ url_for('settings_usage', usage='group_react')}}" method="post">
                                         <div class="form-group">
                                             <input type="text" name="group_id" hidden value="{{ group.group_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
@@ -295,7 +298,7 @@
                                 <td>{{ cat.cat_name }}</td>
                                 <td>
                                     <!-- CAT REACTIVATION FORM -->
-                                    <form action="{{ url_for('settings', usage='cat_react')}}" method="post">
+                                    <form action="{{ url_for('settings_usage', usage='cat_react')}}" method="post">
                                         <div class="form-group">
                                             <input type="text" name="cat_id" hidden value="{{ cat.cat_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
@@ -330,7 +333,7 @@
                             <tr>
                                 <td>{{ cat.cat_name }}</td>
                                 <td>
-                                    <form action="{{ url_for('settings', usage='cat_react')}}" method="post">
+                                    <form action="{{ url_for('settings_usage', usage='cat_react')}}" method="post">
                                         <div class="form-group">
                                             <input type="text" name="cat_id" hidden value="{{ cat.cat_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
