--- a/application/static/final.css
+++ b/application/static/final.css
@@ -80,3 +80,13 @@
 {
     color: green;
 }
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
