--- a/application/templates/expense.html
+++ b/application/templates/expense.html
@@ -14,7 +14,7 @@
         <br><br><br><br><br>
         <h2>Post Transaction</h2>
         <br>
-        <form action="{{ url_for('expense'}}" method="POST">
+        <form action="{{ url_for('expense')}}" method="POST">
             <div class="form-group">
                 <input type="number" step="0.01" min="0.01" name="amount" class="form-control" placeholder="$0.00"
                     autofocus>
