--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -9,6 +9,19 @@
 <div class="row">
     <div class="col-sm-10">
         <h2>Account Settings</h2>
+        <form id="avatar_Edit" action="{{ url_for('settings_usage', usage='edit_avatar')}}" method="post">
+            <button type="button" id=" avatar_edit_show" class="btn btn-default btn-circle"
+                onclick=" display_toggle('edit_avatar')">
+                <img class="rounded-circle account-img" src="{{ avatar }}">
+            </button>
+            <fieldset id='edit_avatar' style="display: none">
+                <input type="file" id="avatar_file" class="form-control form-control-sm" name="avatar_file"
+                    onchange='return avatarValidation()'>
+                <button type="submit" class="btn btn-primary btn-sm">Upload</button>
+                <button type="button" class="btn btn-danger btn-sm"
+                    onclick="display_toggle('edit_avatar')">Cancel</button>
+            </fieldset>
+        </form>
         <br><br>
 
         <!-- PERSONAL INFORMATION -->
