Replace navbar Account btn with avatar

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -62,8 +62,9 @@
             {% if session.user_id %}
             <ul class="nav navbar-nav navbar-right">
                 <form method="GET">
-                    <button class="btn btn-primary" type="submit" formaction="/settings">Account</button>
-                    <button class="btn btn-primary" type="submit" formaction="/logout">Logout</button>
+                    <a href="{{ url_for('settings')}}"><img class="rounded-circle account-img pointer"
+                            src="{{ avatar_key }}" type="submit" {{ url_for('settings')}}"></a>
+                    <button class=" btn" type="submit" formaction="/logout"><i class="fas fa-sign-out-alt"></i></button>
                 </form>
             </ul>
 
