--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -17,6 +17,9 @@
             <div class="col-sm-8">
                 <br><br>
                 <h2>Account Settings</h2>
+                <form action="{{ url_for('settings_usage', usage='reset_token' )}}" method="POST">
+                    <input type="submit" value="Test Token">
+                </form>
             </div>
         </div>
         <div id='edit_avatar' style="display: none" class="row">
