Complete password reset functionality via gmail api

--- a/application/templates/test.html
+++ b/application/templates/test.html
@@ -3,8 +3,16 @@
 {{ ptitle }}
 {% endblock title %}
 
-{% block main %}
+{% block login %}
+<div class="row" style="height: 200px;"></div>
+<div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+        <h2>{{ test }}</h2>
+        <h2>{{ test2 }}</h2>
+        </form>
+    </div>
+    <div class="col-sm-4"></div>
+</div>
 
-{{ test }}
-
-{% endblock main %}
+{% endblock login %}
