--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -18,6 +18,10 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
+        <br>
+        <form action="{{ url_for('reset_request') }}" method=" GET">
+            <button type="submit" class="btn btn-default btn-sm border">Forgot Password?</button>
+        </form>
     </div>
     <div class="col-sm-4"></div>
 </div>
