--- a/application/templates/allocate.html
+++ b/application/templates/allocate.html
@@ -12,7 +12,7 @@
         <h2>Allocate Funds</h2>
         <br>
         <!-- Allocate form -->
-        <form action="{{ url_for('allocate')}}" method="post">
+        <form action="{{ url_for('allocations.allocate')}}" method="post">
             <div class='form-group'>
                 <input type="number" name="amount" step="0.01" min="0.01" class="form-control" placeholder="$0.00"
                     autocomplete="off" autofocus>
