--- a/application/templates/request_reset.html
+++ b/application/templates/request_reset.html
@@ -9,7 +9,7 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
         <h2>Request Password Reset</h2>
-        <form action="{{ url_for('reset_request') }}" method="POST">
+        <form action="{{ url_for('account.reset_request') }}" method="POST">
             <div class="form-group">
                 <input type="text" name="email" class="form-control login-form" placeholder="Enter your email"
                     autocomplete="off" autofocus>
