--- a/application/templates/reset_pw.html
+++ b/application/templates/reset_pw.html
@@ -9,7 +9,7 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
         <h2>Reset Password</h2>
-        <form action="{{ url_for('submit_reset') }}" method="POST">
+        <form action="{{ url_for('account.submit_reset') }}" method="POST">
             <div class="form-group">
                 <input type="text" name="token" value="{{ token }}" hidden>
                 <input type="password" name="password" class="form-control login-form"
