--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -17,7 +17,7 @@
             <div class="col-sm-8">
                 <br><br>
                 <h2>Account Settings</h2>
-                <form action="{{ url_for('settings_usage', usage='reset_token' )}}" method="POST">
+                <form action="{{ url_for('settings.settings_usage', usage='reset_token' )}}" method="POST">
                     <input type="submit" value="Test Token">
                 </form>
             </div>
@@ -25,8 +25,8 @@
         <div id='edit_avatar' style="display: none" class="row">
             <div class="col-sm-10">
                 <br>
-                <form id="avatar_Edit" action="{{ url_for('settings_usage', usage='edit_avatar')}}" method="POST"
-                    enctype=multipart/form-data>
+                <form id="avatar_Edit" action="{{ url_for('settings.settings_usage', usage='edit_avatar')}}"
+                    method="POST" enctype=multipart/form-data>
                     <fieldset>
                         <input type="file" id="avatar_file" class="form-control form-control-sm" name="avatar_file"
                             onchange='return avatarValidation()'>
@@ -80,8 +80,8 @@
                     </tbody>
                     {% endfor %}
                 </table>
-                <form id="pw_reset_form" style="display: none" action="{{ url_for('settings_usage', usage='pw_reset')}}"
-                    method="post">
+                <form id="pw_reset_form" style="display: none"
+                    action="{{ url_for('settings.settings_usage', usage='pw_reset')}}" method="post">
                     <div class="form-group">
                         <input type="password" name="old" class="form-control" autocomplete="off" required
                             placeholder="Current password">
@@ -116,7 +116,7 @@
                 <div class="col-sm-9">
 
                     <h5>Create New Budget</h5>
-                    <form action="{{ url_for('settings_usage', usage='new_bud') }}" method="post">
+                    <form action="{{ url_for('settings.settings_usage', usage='new_bud') }}" method="post">
                         <div class="form-group">
                             <input type="text" name="bud_name" class="form-control" placeholder="Budget Name"
                                 autocomplete="off" autofocus required>
@@ -135,7 +135,7 @@
                 <div class="col-sm-9">
 
                     <h5>Switch Budgets</h5>
-                    <form action="{{ url_for('settings_usage', usage='switch')}}" method="post">
+                    <form action="{{ url_for('settings.settings_usage', usage='switch')}}" method="post">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control">
                                 <option class="form-control" disabled selected value="">Select a budget</option>
@@ -161,7 +161,7 @@
                 <div class="col-sm-9">
 
                     <h5>Reset Budget</h5>
-                    <form action="{{ url_for('settings_usage', usage='bud_reset')}}" method="POST">
+                    <form action="{{ url_for('settings.settings_usage', usage='bud_reset')}}" method="POST">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control" required>
                                 <option class="form-control" disabled selected value="">Select a budget</option>
@@ -196,7 +196,7 @@
                 <div class="col-sm-9">
 
                     <h5>Delete Budget</h5>
-                    <form action="{{ url_for('settings_usage', usage='bud_delete')}}" method="post">
+                    <form action="{{ url_for('settings.settings_usage', usage='bud_delete')}}" method="post">
                         <div class="form-group">
                             <select name="budget" class="form-select form-control" required>
                                 <option class="form-control" disabled selected value="">Select a budget</option>
@@ -263,7 +263,8 @@
                             <td colspan="4">
                                 <p class="alert alert-warning" style="padding: 2px">Payee name changes will affect all
                                     historical records</p>
-                                <form action="{{ url_for('settings_usage', usage='edit_payees')}}" method="POST">
+                                <form action="{{ url_for('settings.settings_usage', usage='edit_payees')}}"
+                                    method="POST">
                                     <div class="form-group">
                                         <input type="text" name="payee_id" hidden value="{{ payee.payee_id }}">
                                         <input type="text" name="old_name" hidden value="{{ payee.payee_name }}">
@@ -310,7 +311,8 @@
                                 <th>{{ group.group_name }}</th>
                                 <th>
                                     <!-- GROUP REACTIVATION FORM -->
-                                    <form action="{{ url_for('settings_usage', usage='group_react')}}" method="post">
+                                    <form action="{{ url_for('settings.settings_usage', usage='group_react')}}"
+                                        method="post">
                                         <div class="form-group">
                                             <input type="text" name="group_id" hidden value="{{ group.group_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
@@ -326,7 +328,8 @@
                                 <td>{{ cat.cat_name }}</td>
                                 <td>
                                     <!-- CAT REACTIVATION FORM -->
-                                    <form action="{{ url_for('settings_usage', usage='cat_react')}}" method="post">
+                                    <form action="{{ url_for('settings.settings_usage', usage='cat_react')}}"
+                                        method="post">
                                         <div class="form-group">
                                             <input type="text" name="cat_id" hidden value="{{ cat.cat_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
@@ -361,7 +364,8 @@
                             <tr>
                                 <td>{{ cat.cat_name }}</td>
                                 <td>
-                                    <form action="{{ url_for('settings_usage', usage='cat_react')}}" method="post">
+                                    <form action="{{ url_for('settings.settings_usage', usage='cat_react')}}"
+                                        method="post">
                                         <div class="form-group">
                                             <input type="text" name="cat_id" hidden value="{{ cat.cat_id }}">
                                             <button type="submit" class="btn"><i class="far fa-heart"
