Successfully compile program to run live under new blurprint factory

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -62,8 +62,8 @@
             {% if session.user_id %}
             <ul class="nav navbar-nav navbar-right">
                 <form method="GET">
-                    <a href="{{ url_for('settings.settings')}}"><img class="rounded-circle account-img pointer"
-                            src="{{ avatar_key }}" type="submit" {{ url_for('settings.settings')}}"></a>
+                    <a href="{{ url_for('settings.settings_route')}}"><img class="rounded-circle account-img pointer"
+                            src="{{ avatar_key }}" type="submit" {{ url_for('settings.settings_route')}}"></a>
                     <button class=" btn" type="submit" formaction="/logout"><i class="fas fa-sign-out-alt"></i></button>
                 </form>
             </ul>
