Ad custom error pages for 403, 404, and 500

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -25,8 +25,8 @@
         </form>
     </div>
 
-    <dov class="col-sm-3">
-</div>
+    <div class="col-sm-3">
+    </div>
 </div>
 
 <!-- IF THE USER DOES HAVE ONE OR MORE BUDGETS, DISPLAY THE LAST ONE THEIR ACCOUNT WAS SET TO -->
