Update layout.html and db to reflect new project name: MyDialedBudget

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -45,17 +45,20 @@
         <div class="container-fluid">
             <div class="navbar_header" style="font-size: x-large;">
                 <a class="navbar-brand" href=" {{ url_for('budget.index') }}"><i class="fas fa-home"></i></a>
-                <span style="color: purple;"> B</span>
-                <span style="color: blue">u</span>
-                <span style="color: green">d</span>
-                <span style="color: goldenrod">g</span>
-                <span style="color: orange">e</span>
-                <span style="color: red">t</span>
-                <span style="color: purple">B</span>
-                <span style="color: blue">u</span>
-                <span style="color: green">d</span>
-                <span style="color: goldenrod">d</span>
-                <span style="color: orange">y</span>
+                <span style="color: purple;"> M</span>
+                <span style="color: blue">y</span>
+                <span style="color: green">D</span>
+                <span style="color: goldenrod">i</span>
+                <span style="color: orange">a</span>
+                <span style="color: red">l</span>
+                <span style="color: purple">e</span>
+                <span style="color: blue">d</span>
+                <span style="color: green">B</span>
+                <span style="color: goldenrod">u</span>
+                <span style="color: orange">d</span>
+                <span style="color: red">g</span>
+                <span style="color: purple">e</span>
+                <span style="color: blue">t</span>
             </div>
 
             <!-- Navbar when user IS logged in-->
